[project]
name = "osmnx-viz"
version = "0.1.0"
description = ""
authors = [
    {name = "RodolfoFigueroa",email = "4rodolfofigueroa2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "osmnx (>=2.0.2,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "pyfonts (>=0.0.2,<0.0.3)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
